[workspace]
resolver = "2"
members = [
    "crates/rqbit",
    "crates/librqbit",
    "crates/buffers",
    "crates/clone_to_owned",
    "crates/bencode",
    "crates/sha1w",
    "crates/librqbit_core",
    "crates/librqbit_lsd",
    "crates/peer_binary_protocol",
    "crates/dht",
    "crates/upnp",
    "crates/tracker_comms",
    "crates/upnp-serve",
    "desktop/src-tauri", "test-450/test-librqbit",
    # "test-450/test-bencode",
    # "test-450/test-dht",
    # "test-450/test-core",
    # "test-450/test-lsd",
    # "test-450/test-peer-binary-protocol",
    # "test-450/test-tracker-comms",
    # "test-450/test-upnp",
    # "test-450/test-upnp-serve",
]

# Everything except desktop
default-members = [
    "crates/rqbit",
    "crates/librqbit",
    "crates/buffers",
    "crates/clone_to_owned",
    "crates/bencode",
    "crates/sha1w",
    "crates/librqbit_core",
    "crates/peer_binary_protocol",
    "crates/dht",
    "crates/upnp",
    "crates/tracker_comms",
    "crates/upnp-serve",
]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
debug = false
lto = "thin"

[profile.release-github]
inherits = "release"
lto = false

[profile.release-debug]
inherits = "release"
debug = true
