[package]
name = "librqbit-bencode"
version = "3.1.0"
edition = "2024"
description = "Bencode serialization and deserialization using Serde"
license = "Apache-2.0"
documentation = "https://docs.rs/librqbit-bencode"
repository = "https://github.com/ikatson/rqbit"
readme = "README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
buffers = { path = "../buffers", package = "librqbit-buffers", version = "4.2" }
clone_to_owned = { path = "../clone_to_owned", package = "librqbit-clone-to-owned", version = "3" }
bytes = "1.7.1"
atoi = "2.0.0"
thiserror = "2.0.12"
arrayvec = "0.7.6"
anyhow = "1.0.98"
