[package]
name = "librqbit-buffers"
version = "4.2.0"
edition = "2024"
description = "Utils to work with &[u8] and Vec<u8> in librqbit source code."
license = "Apache-2.0"
documentation = "https://docs.rs/librqbit-buffers"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
serde_derive.workspace = true
clone_to_owned.workspace = true
bytes.workspace = true
