[package]
name = "librqbit-clone-to-owned"
version = "3.0.1"
edition = "2024"
description = "Util traits to represent something that can be made owned and change type at the same time."
license = "Apache-2.0"
documentation = "https://docs.rs/librqbit-clone-to-owned"
readme = "README.md"

[dependencies]
bytes.workspace = true
