[package]
name = "librqbit-dht"
version = "5.3.0"
edition = "2024"
description = "DHT implementation, used in rqbit torrent client."
license = "Apache-2.0"
documentation = "https://docs.rs/librqbit-dht"
repository = "https://github.com/ikatson/rqbit"
readme = "README.md"

[dependencies]
librqbit-core.workspace = true
librqbit-buffers.workspace = true
librqbit-dualstack-sockets.workspace = true

anyhow.workspace = true
backon.workspace = true
bencode.workspace = true
bytes.workspace = true
chrono.workspace = true
clone_to_owned.workspace = true
dashmap.workspace = true
futures.workspace = true
indexmap.workspace = true
leaky-bucket.workspace = true
parking_lot.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "sync"] }
tracing.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
