[package]
name = "librqbit"
version = "9.0.0-beta.1"
authors = ["Igor Katson <igor.katson@gmail.com>"]
edition = "2024"
description = "The main library used by rqbit torrent client. The binary is just a small wrapper on top of it."
license = "Apache-2.0"
documentation = "https://docs.rs/librqbit"
repository = "https://github.com/ikatson/rqbit"
readme = "README.md"

[features]
default = ["default-tls", "http-api-client"]

tokio-console = ["dep:console-subscriber", "tokio/tracing"]
http-api = ["dep:axum", "dep:axum-extra", "dep:tower-http"]
http-api-client = []
upnp-serve-adapter = ["dep:upnp-serve"]
webui = []
timed_existence = []
default-tls = [
    "reqwest/default-tls",
    "sha1w/sha1-crypto-hash",
    "librqbit-core/sha1-crypto-hash",
]
prometheus = ["dep:metrics-exporter-prometheus"]
rust-tls = ["reqwest/rustls-tls", "sha1w/sha1-ring", "librqbit-core/sha1-ring"]
storage_middleware = ["dep:lru"]
storage_examples = []
tracing-subscriber-utils = ["dep:tracing-subscriber"]
postgres = ["dep:sqlx", "dep:home"]
async-bt = ["dep:async-backtrace"]
watch = ["dep:notify"]
disable-upload = []

# These are absolutely useless for people, just for debugging / testing / benchmarking
_disable_disk_write_net_benchmark = []
_disable_reconnect_test = []

[dependencies]
librqbit-core.workspace = true
librqbit-dualstack-sockets.workspace = true
librqbit-lsd.workspace = true
librqbit-upnp.workspace = true
librqbit-utp.workspace = true

anyhow.workspace = true
arc-swap.workspace = true
async-backtrace = { workspace = true, optional = true }
async-compression.workspace = true
async-stream.workspace = true
async-trait.workspace = true
axum = { workspace = true, optional = true }
axum-extra = { workspace = true, optional = true }
backon.workspace = true
base64.workspace = true
bencode.workspace = true
bincode.workspace = true
bitvec.workspace = true
buffers.workspace = true
byteorder.workspace = true
bytes.workspace = true
clone_to_owned.workspace = true
console-subscriber = { workspace = true, optional = true }
dashmap.workspace = true
dht.workspace = true
futures.workspace = true
governor.workspace = true
hex.workspace = true
home = { workspace = true, optional = true }
http.workspace = true
intervaltree.workspace = true
itertools.workspace = true
lru = { workspace = true, optional = true }
memmap2.workspace = true
metrics-exporter-prometheus = { workspace = true, optional = true }
mime_guess.workspace = true
nix.workspace = true
notify = { workspace = true, optional = true }
parking_lot.workspace = true
peer_binary_protocol.workspace = true
rand.workspace = true
regex.workspace = true
reqwest.workspace = true
rlimit.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
serde_with.workspace = true
sha1w.workspace = true
size_format.workspace = true
socket2.workspace = true
sqlx = { workspace = true, optional = true }
thiserror.workspace = true
tokio-socks.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "fs", "io-util"] }
tower-http = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
tracing.workspace = true
tracker_comms.workspace = true
upnp-serve = { workspace = true, optional = true }
url.workspace = true
urlencoding.workspace = true
uuid.workspace = true
walkdir.workspace = true

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.1", features = [
    "Win32",
    "Win32_System",
    "Win32_System_IO",
    "Win32_System_Ioctl",
] }

[build-dependencies]
anyhow.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio-test.workspace = true
tracing-subscriber.workspace = true
