[package]
name = "librqbit-core"
version = "5.0.0"
edition = "2024"
description = "Important utilities used throughout librqbit useful for working with torrents."
license = "Apache-2.0"
documentation = "https://docs.rs/librqbit-core"
repository = "https://github.com/ikatson/rqbit"
readme = "README.md"

[features]
default = ["sha1-crypto-hash"]
sha1-crypto-hash = ["sha1w/sha1-crypto-hash"]
sha1-ring = ["sha1w/sha1-ring"]

[dependencies]
anyhow.workspace = true
bencode.workspace = true
buffers.workspace = true
bytes.workspace = true
chardetng.workspace = true
clone_to_owned.workspace = true
data-encoding.workspace = true
directories.workspace = true
encoding_rs.workspace = true
hex.workspace = true
itertools.workspace = true
memchr.workspace = true
parking_lot.workspace = true
rand.workspace = true
serde.workspace = true
sha1w.workspace = true
thiserror.workspace = true
tokio-util.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
tracing.workspace = true
url.workspace = true

[dev-dependencies]
serde_json.workspace = true
