[package]
name = "librqbit-lsd"
version = "0.1.0"
edition = "2024"

[dependencies]
sha1w.workspace = true
librqbit-core.workspace = true

anyhow.workspace = true
atoi.workspace = true
bstr.workspace = true
futures.workspace = true
httparse.workspace = true
librqbit-dualstack-sockets.workspace = true
parking_lot.workspace = true
rand.workspace = true
tokio-util.workspace = true
tokio = { workspace = true, features = ["time"] }
tracing.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
