[package]
name = "librqbit-peer-protocol"
version = "4.3.0"
edition = "2024"
description = "Protocol for working with torrent peers. Used in rqbit torrent client."
license = "Apache-2.0"
documentation = "https://docs.rs/librqbit-peer-protocol"
repository = "https://github.com/ikatson/rqbit"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1", features = ["derive"] }
byteorder = "1"
buffers = { path = "../buffers", package = "librqbit-buffers", version = "4.2" }
bencode = { path = "../bencode", default-features = false, package = "librqbit-bencode", version = "3.1" }
clone_to_owned = { path = "../clone_to_owned", package = "librqbit-clone-to-owned", version = "3" }
librqbit-core = { path = "../librqbit_core", default-features = false, version = "5" }
bitvec = "1"
anyhow = "1"
bytes = "1.7.1"
itertools = "0.14"
thiserror = "2.0.12"
tracing = "0.1.41"

[dev-dependencies]
criterion = "0.6.0"


[[bench]]
name = "bench"
harness = false
