[package]
name = "librqbit-peer-protocol"
version = "4.3.0"
edition = "2024"
description = "Protocol for working with torrent peers. Used in rqbit torrent client."
license = "Apache-2.0"
documentation = "https://docs.rs/librqbit-peer-protocol"
repository = "https://github.com/ikatson/rqbit"
readme = "README.md"

[dependencies]
librqbit-core.workspace = true

anyhow.workspace = true
bencode.workspace = true
bitvec.workspace = true
buffers.workspace = true
byteorder.workspace = true
bytes.workspace = true
clone_to_owned.workspace = true
itertools.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
criterion.workspace = true


[[bench]]
name = "bench"
harness = false
